# Procedural-Generation-

./: CMakeLists.txt  README.md  main  main.cpp
descriptors/: BaseDescriptor.cpp  BaseDescriptor.hpp  FPFHDescriptorTester.cpp  FPFHDescriptorTester.hpp  QUICCIDescriptor.cpp  QUICCIDescriptor.hpp  RICIDescriptorTester.cpp  RICIDescriptorTester.hpp  SIDescriptorTester.cpp  SIDescriptorTester.hpp
distances/: quicciDistances.cu  riciDistances.cu  siDistances.cu  utility.cu  utility.cuh
images/json/: histogram.py
images/json/clutter/: histogram_C_1.json  histogram_C_2.json  histogram_C_3.json  histogram_E_min.json  histogram_Pairwise_RICI_.json
images/json/combined/: histogram_E_avg_RICI.json  histogram_E_max_RICI.json  histogram_E_min_RICI.json  histogram_I_avg_RICI.json  histogram_I_max_RICI.json  histogram_I_min.json  histogram_I_min_RICI.json  histogram_Pairwise_RICI.json
images/json/noise/: histogram_E_min.json  histogram_I_max.json  histogram_I_min.json  histogram_N_0.00.json  histogram_N_0.01.json  histogram_N_0.02.json  histogram_N_0.04.json  histogram_Pairwise_RICI_0.01.json  histogram_Pairwise_RICI_0.02.json  histogram_Pairwise_RICI_0.1.json
images/json/occlusion/: histogram_I_min.json  histogram_O_0.0.10.json  histogram_O_0.10.1.json  histogram_O_3.-10.1.json
images/json/rici/: combined_pairwise.json
images/json/si/: E_avg.json  E_avg_RICI.json  E_max.json  E_max_RICI.json  E_min.json  E_min_RICI.json  I_avg.json  I_max.json  I_min.json  pairwise_combined.json
lib/glm/: .travis.yml
lib/glm/glm/detail/: type_quat_simd.inl
lib/glm/glm/gtx/: intersect.inl  matrix_decompose.inl
lib/glm/test/core/: core_func_common.cpp  core_func_integer_find_lsb.cpp
lib/glm/test/gtc/: gtc_bitfield.cpp  gtc_quaternion.cpp  gtc_user_defined_types.cpp
lib/glm/test/gtx/: gtx_dual_quaternion.cpp  gtx_extended_min_max.cpp  gtx_matrix_factorisation.cpp  gtx_mixed_product.cpp  gtx_random.cpp  gtx_simd_mat4.cpp
meshModifier/: cgalMesh.cpp  cgalMesh.hpp  meshModifier.cpp  meshModifier.hpp  model.cpp  model.hpp
openglHandler/: openglHandler.cpp  openglHandler.hpp  openglMesh.cpp  openglMesh.hpp  shader.hpp
res/shaders/: basicVisualizer.frag  basicVisualizer.vert  line.frag  line.vert  occlusionFinder.frag  occlusionFinder.vert
utilities/: aliases.hpp  boundingBox.cpp  boundingBox.hpp  cgalMeshFunctions.cpp  cgalMeshFunctions.hpp  descriptorDistance.cpp  descriptorDistance.cu  descriptorDistance.cuh  descriptorDistance.hpp  generalUtilities.cpp  generalUtilities.hpp  mathUtilities.cpp  mathUtilities.hpp  meshFunctions.cpp  meshFunctions.hpp
